# word-segmenter

./: A.jsonl  README.md  api.py  cli.py  morphology_core.py  morphology_detailed.db  morphology_detailed.py  project.md  pyproject.toml  result.jsonl  words.txt  Ç.jsonl
data/: B.jsonl  C.jsonl  D.jsonl  E.jsonl  F.jsonl  G.jsonl  H.jsonl  X.jsonl  Ə.jsonl
static/: index.html  main.js  style.css
